# openwrt-rust-example

./: Cargo.toml  build.rs  build.sh  readme.md
.cargo/: config.toml
src/: conntrack_events.c  main.rs
