cargo-features = ["strip"]

[package]
name = "openwrt-rust-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"


[build-dependencies]
cc = "1.0"

[profile.release]
strip = "symbols"
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
